--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "babel-plugin-styled-components": "^2.1.4",
     "next": "14.2.3",
     "react": "^18",
